# Team-004-Backend

./: .gitignore  .pep257  .prospector.yml  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
audit_management/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
audit_management/migrations/: 0001_initial.py
audit_management/tests/: test_models.py
backoffice_management/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backoffice_management/migrations/: 0001_initial.py
backoffice_management/tests/: test_models.py
investor_management/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
investor_management/migrations/: 0001_initial.py  0002_auto_20200525_0142.py  0003_investororgsmeprojectinvestments.py
investor_management/tests/: test_investor_apis.py  test_models.py
sme_financing_app_one/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
sme_financing_app_one/migrations/: 0001_initial.py
sme_financing_project/: asgi.py  settings.py  urls.py  wsgi.py
sme_management/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
sme_management/migrations/: 0001_initial.py  0002_smeuser_user.py  0003_auto_20200523_1047.py  0004_auto_20200523_2146.py  0005_auto_20200523_2148.py  0006_auto_20200524_2232.py  0007_auto_20200525_0056.py  0008_auto_20200525_0113.py  0009_auto_20200525_0142.py  0010_auto_20200526_1504.py  0011_auto_20200527_2102.py  (+9 more)
user_management/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+7 files in other folders)
